[gd_scene load_steps=6 format=3 uid="uid://uskc3svfceoj"]

[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="1_ibvxf"]
[ext_resource type="Script" uid="uid://8wyly7wvuebx" path="res://niveis_2.gd" id="1_vhxys"]
[ext_resource type="Texture2D" uid="uid://bd61g6fiuwms8" path="res://minimal3.webp" id="2_vtpi2"]
[ext_resource type="Script" uid="uid://bnwckymgyx8ad" path="res://minimal_3.gd" id="3_8wdx4"]
[ext_resource type="Texture2D" uid="uid://bl00c7q3wplu1" path="res://assets/PyramidMaker.jpg" id="4_8wdx4"]

[node name="Node2D" type="Node2D"]
position = Vector2(209, 287)
script = ExtResource("1_vhxys")

[node name="Minimal4" type="Sprite2D" parent="."]
position = Vector2(366, 32)
scale = Vector2(1.89352, 1.83882)
texture = ExtResource("2_vtpi2")
script = ExtResource("3_8wdx4")

[node name="Minimal3" type="Sprite2D" parent="."]
position = Vector2(368, 41)
scale = Vector2(1.71205, 1.62778)
texture = ExtResource("4_8wdx4")
script = ExtResource("3_8wdx4")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 139.0
offset_top = -235.0
offset_right = 875.0
offset_bottom = -152.0
theme_override_font_sizes/font_size = 60
text = "Pyramid Maker"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -98.0
offset_right = 666.0
offset_bottom = 222.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonNivel1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 01"

[node name="ButtonNivel2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 02"

[node name="ButtonNivel3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 03"

[node name="ButtonNivel4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 04"

[node name="ButtonNivel5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 05"

[node name="ButtonNivel6" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 06"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonNivel7" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 07"

[node name="ButtonNivel8" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 08"

[node name="ButtonNivel9" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 09"

[node name="ButtonNivel10" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 10"

[node name="ButtonNivel11" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 11"

[node name="ButtonNivel12" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 12"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel13" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 13"

[node name="ButtonNivel14" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 14"

[node name="ButtonNivel15" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 15"

[node name="ButtonNivel16" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 16"

[node name="ButtonNivel17" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 17"

[node name="ButtonNivel18" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 18"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel19" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 19"

[node name="ButtonNivel20" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 20"

[node name="ButtonNivel21" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 21"

[node name="ButtonNivel22" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 22"

[node name="ButtonNivel23" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 23"

[node name="ButtonNivel24" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 24"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel25" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 25"

[node name="ButtonNivel26" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 26"

[node name="ButtonNivel27" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 27"

[node name="ButtonNivel28" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 28"

[node name="ButtonNivel29" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 29"

[node name="ButtonNivel30" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 30"

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = -141.0
offset_top = -242.0
offset_right = 371.0
offset_bottom = 270.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("1_ibvxf")

[node name="Label" type="Label" parent="."]
offset_left = 139.0
offset_top = -162.0
offset_right = 582.0
offset_bottom = -139.0
text = "Os níveis serão liberados conforme você avançar no jogo!"
