extends Node2D

var arrow_back: TextureButton
var button_hover_script: GDScript

# DicionÃ¡rio para mapear nomes dos nÃ­veis para cenas
var level_scenes = {
	"arvore_binaria_nivel1": "res://Jogo2Fase1.tscn",
	"arvore_binaria_nivel2": "res://Jogo2Fase2.tscn",
	"arvore_binaria_nivel3": "res://Jogo2Fase3.tscn",
	"arvore_binaria_nivel4": "res://Jogo2Fase4.tscn",
	"arvore_binaria_nivel5": "res://Jogo2Fase5.tscn",
	"arvore_binaria_nivel6": "res://Jogo2Fase6.tscn",
	"arvore_binaria_nivel7": "res://Jogo2Fase7.tscn",
	"arvore_binaria_nivel8": "res://Jogo2Fase8.tscn",
	"arvore_binaria_nivel9": "res://Jogo2Fase9.tscn",
	"arvore_binaria_nivel10": "res://Jogo2Fase10.tscn"
}

@onready var level_buttons = {
	"arvore_binaria_nivel1": $VBoxContainer/HBoxContainer/ButtonNivel1,
	"arvore_binaria_nivel2": $VBoxContainer/HBoxContainer/ButtonNivel2,
	"arvore_binaria_nivel3": $VBoxContainer/HBoxContainer/ButtonNivel3,
	"arvore_binaria_nivel4": $VBoxContainer/HBoxContainer/ButtonNivel4,
	"arvore_binaria_nivel5": $VBoxContainer/HBoxContainer/ButtonNivel5,
	"arvore_binaria_nivel6": $VBoxContainer/HBoxContainer/ButtonNivel6,
	"arvore_binaria_nivel7": $VBoxContainer/HBoxContainer2/ButtonNivel7,
	"arvore_binaria_nivel8": $VBoxContainer/HBoxContainer2/ButtonNivel8,
	"arvore_binaria_nivel9": $VBoxContainer/HBoxContainer2/ButtonNivel9,
	"arvore_binaria_nivel10": $VBoxContainer/HBoxContainer2/ButtonNivel10
}

func _ready():
	print("=== INICIANDO SELEÃ‡ÃƒO DE NÃVEIS ÃRVORE BINÃRIA ===")
	
	# Conectar botÃ£o de voltar
	arrow_back = $ArrowBack
	if arrow_back:
		arrow_back.pressed.connect(_on_arrow_back_pressed)
	else:
		print("Aviso: ArrowBack nÃ£o encontrado")
	
	# Conectar sinais do progress manager
	if ProgressManager:
		ProgressManager.progress_loaded.connect(_on_progress_loaded)
		ProgressManager.level_access_checked.connect(_on_level_access_checked)
		
		# Carregar progresso do usuÃ¡rio para o jogo 2 (Ãrvores BinÃ¡rias)
		ProgressManager.load_user_progress("2")
	else:
		print("Erro: ProgressManager nÃ£o encontrado - verifique configuraÃ§Ã£o do autoload")
	
	# Conectar botÃµes de nÃ­vel
	_setup_level_buttons()
	
	# Configurar efeito hover
	button_hover_script = preload("res://ButtonHoverEffect.gd")
	await get_tree().create_timer(0.1).timeout
	aplicar_efeito_hover_todos_botoes()

func _setup_level_buttons():
	# Conectar cada botÃ£o ao seu nÃ­vel correspondente
	for level_name in level_buttons:
		var button = level_buttons[level_name]
		if button:
			# Remover conexÃµes existentes para evitar duplicaÃ§Ã£o
			if button.is_connected("pressed", _on_level_button_pressed):
				button.disconnect("pressed", _on_level_button_pressed)
			
			button.pressed.connect(_on_level_button_pressed.bind(level_name))
			print("Conectado botÃ£o: ", level_name)
		else:
			print("Aviso: BotÃ£o nÃ£o encontrado para ", level_name)

func _on_arrow_back_pressed():
	print("â† Voltando para tela principal...")
	get_tree().change_scene_to_file("res://jogar.tscn")

func _on_level_button_pressed(level_name: String):
	print("ðŸŽ® Tentando acessar nÃ­vel: ", level_name)
	
	# VerificaÃ§Ã£o SIMPLIFICADA - SEM AWAIT
	if ProgressManager and ProgressManager.has_access_to_level(level_name, "2"):
		_open_level(level_name)
	else:
		# Verificar com o servidor
		if ProgressManager:
			ProgressManager.check_level_access(level_name, "2")
		else:
			print("Erro: ProgressManager nÃ£o disponÃ­vel")
			# Fallback: permitir acesso se nÃ£o houver progress manager
			_open_level(level_name)

func _on_progress_loaded(game_id: String):
	if game_id == "2":  # SÃ³ atualizar se for do jogo 2
		print("ðŸ”„ Atualizando interface com progresso carregado")
		update_level_buttons_visual()

func _on_level_access_checked(level_name: String, access_granted: bool):
	if access_granted:
		_open_level(level_name)
	else:
		show_access_denied_message(level_name)

func update_level_buttons_visual():
	if not ProgressManager:
		print("Erro: ProgressManager nÃ£o disponÃ­vel para atualizar visual")
		return
	
	for level_name in level_buttons:
		var button = level_buttons[level_name]
		if button:
			var level_data = ProgressManager.get_level_data(level_name, "2")
			var is_unlocked = ProgressManager.has_access_to_level(level_name, "2")  # CORRIGIDO
			var is_completed = level_data.get("completed", false) if level_data else false
			var score = level_data.get("score", 0) if level_data else 0
			
			# Configurar aparÃªncia baseada no estado
			if is_completed:
				button.text = level_name.replace("arvore_binaria_nivel", "NÃ­vel ") + " âœ…\n" + str(score) + " pts"
				button.modulate = Color(0.5, 1.0, 0.5)  # Verde para concluÃ­do
				button.disabled = false
			elif is_unlocked:
				button.text = level_name.replace("arvore_binaria_nivel", "NÃ­vel ")
				button.modulate = Color(1.0, 1.0, 1.0)  # Normal para desbloqueado
				button.disabled = false
			else:
				button.text = level_name.replace("arvore_binaria_nivel", "NÃ­vel ") + " ðŸ”’"
				button.modulate = Color(0.5, 0.5, 0.5)  # Cinza para bloqueado
				button.disabled = true

func _open_level(level_name: String):
	print("ðŸš€ Abrindo nÃ­vel: ", level_name)
	
	if level_name in level_scenes:
		var scene_path = level_scenes[level_name]
		var error = get_tree().change_scene_to_file(scene_path)
		if error != OK:
			print("âŒ Erro ao carregar cena: ", scene_path, " - CÃ³digo: ", error)
	else:
		print("âŒ Cena nÃ£o encontrada para: ", level_name)

func show_access_denied_message(level_name: String):
	var alert = AcceptDialog.new()
	alert.title = "NÃ­vel Bloqueado"
	alert.dialog_text = "Complete o nÃ­vel anterior para desbloquear " + level_name.replace("arvore_binaria_nivel", "NÃ­vel ")
	add_child(alert)
	alert.popup_centered()
	alert.confirmed.connect(alert.queue_free)

func aplicar_efeito_hover_todos_botoes():
	var botoes = _buscar_todos_botoes(self)
	
	for botao in botoes:
		if not botao.has_node("ButtonHoverEffect"):
			var effect_node = Node.new()
			effect_node.set_script(button_hover_script)
			botao.add_child(effect_node)
			effect_node.name = "ButtonHoverEffect"

func _buscar_todos_botoes(node: Node) -> Array:
	var botoes = []
	
	if node is BaseButton and node.visible:
		botoes.append(node)
	
	for child in node.get_children():
		botoes.append_array(_buscar_todos_botoes(child))
	
	return botoes
